# GitLabCICD

./: .gitignore  CMakeLists.txt  Pipeline.txt  README.md  build_scr.sh  build_test_scr.sh  main.cpp
tests/: CMakeLists.txt
tests/cmake/: AddGTest.cmake
tests/unit_tests/: CMakeLists.txt  tests.cpp
user_code/inc/: functions.hpp
user_code/src/: functions.cpp
